Fix Lambda 502 error: Replace Hedera SDK with mock wallet creation
- Temporarily comment out @hashgraph/sdk imports to resolve 502 errors
- Implement mock Hedera wallet generation for testing
- Maintain all AWS service integrations (DynamoDB, KMS, Cognito)
- Update Lambda function to version 2.2.1 for preprod environment
- Add comprehensive error handling and debugging logs
- Store operator credentials in DynamoDB for future real integration
- Create deployment package without problematic dependencies

Fixes: 502 Bad Gateway errors in wallet creation
Environment: Preprod
Status: Ready for testing with mock wallets

--- a/apps/web/safemate/index.html
+++ b/apps/web/safemate/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <meta name="description" content="SafeMate Portal - Secure file management powered by Hedera File Service" />
     <meta name="theme-color" content="#5fb3d4" />
-    <title>SafeMate Portal - Development</title>
-    <!-- Environment: Development | Last Updated: September 2025 | Status: Active -->
+    <title>SafeMate Portal - Preprod</title>
+    <!-- Environment: Preprod | Last Updated: September 17, 2025 | Status: Active | API Gateway Fixed -->
   </head>
   <body>
     <div id="root"></div>
